--- a/webpage/package.json
+++ b/webpage/package.json
@@ -10,6 +10,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "test": "ava --verbose",
     "precommit": "npm run lint"
   },
   "dependencies": {
@@ -20,10 +21,28 @@
     "vue-highcharts": "^0.0.10"
   },
   "devDependencies": {
+    "ava": "^0.24.0",
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
+    "jsdom": "^11.5.1"
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
